--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>rua6rh3i</title>
   </head>
   <body>
+    hey
     <img src="images/firefox-icon.png" alt="My test image">
   </body>
 </html>
